--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -29,13 +29,13 @@
 .menu-icon {
     padding-top: 25px;
     position: relative;
-    left:-60px
+    left:-80px
     
 }
 
 .search {
     padding-top: 25px;
     position: absolute;
-    right: 70px;
+    right: 60px;
     
 }
