--- a/src/components/ejuice/Ejuice.css
+++ b/src/components/ejuice/Ejuice.css
@@ -5,8 +5,8 @@
     padding-top: 30px;
     flex-direction: row;
     align-items: center;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 140px;
+    margin-right: 140px;
 }
 
 .pagination {
